chore: update ollama version to phi mini 3 openai integration

--- a/back/.env.example
+++ b/back/.env.example
@@ -7,8 +7,13 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 # HMAC Secret (required - must match Unity secret)
 SECRET_HMAC_KEY=your-secret-for-hmac-verification-change-this
 
-# OpenAI (required for chatbot)
-OPENAI_API_KEY=sk-your-openai-api-key
+# AI Configuration (choose one)
+# Option 1: Use local Python AI Service with GPT-OSS (RECOMMENDED)
+USE_LOCAL_MODEL=true
+PYTHON_AI_SERVICE_URL=http://localhost:5000
+
+# Option 2: Use Hugging Face API (fallback)
+HUGGINGFACE_API_KEY=your-huggingface-token-here
 
 # JWT Secret (required for authentication)
 JWT_SECRET=your-jwt-secret-key-change-this
