--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.50.0",
+    "react-qr-code": "^2.0.18",
     "tailwind-merge": "^2.2.0",
     "three": "^0.180.0",
     "zod": "^3.22.0",
