--- a/.github/workflows/main_sorokina.yml
+++ b/.github/workflows/main_sorokina.yml
@@ -25,16 +25,20 @@ jobs:
         with:
           node-version: '20.x'
       
-      - name: npm install and build
+      - name: npm ci and build
         run: |
-          npm install
+          npm ci
           npm run build
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./back
+          path: |
+            ./back/dist
+            ./back/node_modules
+            ./back/package.json
+            ./back/package-lock.json
   
   deploy:
     runs-on: ubuntu-latest
@@ -54,4 +58,4 @@ jobs:
           slot-name: 'Production'
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AD905A3375F8409AA3C43EE351A6F989 }}
-
+          startup-command: 'npm run start:prod'
